fix: If type is unset (= CommonJS) esm entry points need explicit file extension
Signed-off-by: Ferdinand Thiessen <rpm@fthiessen.de>

--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "@skjnldsv/sanitize-svg",
   "version": "1.0.2",
   "description": "a small script to remove script tags from SVGs",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.es.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.esm.js",
-      "require": "./dist/index.js"
+      "import": "./dist/index.es.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
